remove open argline