@@ -509,8 +509,6 @@
                             <useSystemClassLoader>true</useSystemClassLoader>
                             <forkMode>once</forkMode>
                             <argLine>${argline} ${jacocoArgLine}
-                                --add-opens java.base/java.lang=ALL-UNNAMED
-                                --add-opens java.base/java.util=ALL-UNNAMED
                             </argLine>
                             <systemProperties>
                                 <!-- common shared -->
